# QLLVM

./: .gitignore  CMakeLists.txt  LICENSE  README.cn.md  README.md  license_template_cpp.txt  license_template_python.txt
backend/: BackendRegistry.cpp  CMakeLists.txt
backend/backends/: OriginQuantumBackend.cpp  QasmBackend.cpp  QirRunnerBackend.cpp  QirRunnerCompat.cpp  TianyanBackend.cpp
backend/backends/TrappedIonqasm/: QirToIonQasm.cpp
backend/backends/origin_quantum/: QirToOriginir.cpp  QirToOriginir.hpp
backend/backends/qasm/: QirToQasm.cpp  QirToQasm.hpp
backend/backends/tianyan/: QirToQcis.cpp  QirToQcis.hpp
backend/include/qllvm/: Backend.hpp  BackendOptions.hpp  BackendRegistry.hpp  QirRunnerCompat.hpp
backend/include/qllvm/backends/: IonQasmBackend.hpp  OriginQuantumBackend.hpp  QasmBackend.hpp  QirRunnerBackend.hpp  TianyanBackend.hpp
cmake/: AddPathToRc.cmake  qllvm_config.hpp.in
examples/hybrid/: README.md  gmac_simon.qasm  main.cpp  main_gmac_simon.cpp  main_qaoa.cpp  qaoa.qasm  qaoa_suboptimal.qasm  qllvm_mpiq.cpp  vqe.qasm
examples/hybrid_cuda/: build_and_run.sh  kernel.cu  main.cpp
mlir/: qllvm_mlir_api.cpp  qllvm_mlir_api.hpp
mlir/dialect/: CMakeLists.txt
mlir/parsers/: mlir_generator.hpp
mlir/parsers/qasm3/: CMakeLists.txt  openqasmv3_mlir_generator.cpp  openqasmv3_mlir_generator.hpp  qasm3_visitor.hpp
mlir/parsers/qasm3/utils/: expression_handler.cpp  expression_handler.hpp  qasm3_utils.cpp  qasm3_utils.hpp  symbol_table.cpp  symbol_table.hpp
mlir/parsers/qasm3/visitor_handlers/: alias_handler.cpp  classical_types_handler.cpp  compute_action_handler.cpp  conditional_handler.cpp  control_directive_handler.cpp  loop_stmt_handler.cpp  measurement_handler.cpp  qllvm_expect_handler.cpp  quantum_instruction_handler.cpp  quantum_types_handler.cpp  subroutine_handler.cpp
mlir/qir_qrt_stub/: qir-qrt-stub.cpp
mlir/qir_runner_runtime/: qir-runner-runtime.cpp  qir-runner-runtime.h
mlir/tools/: CMakeLists.txt  CompilationPipeline.cpp  CompilationPipeline.hpp  qllvm-compile.cpp  qllvm-mlir-helper.hpp
mlir/transforms/: pass_manager.hpp  quantum_to_llvm.cpp  quantum_to_llvm.hpp
passes/lib/: ApplyLayoutQirPass.cpp  CircuitExtractor.cpp  CouplingMap.cpp  DecomposeSwapQirPass.cpp  SabreLayout.cpp  SabrePass.cpp  SabreSwap.cpp  u3_to_rphi.cpp
plugin/: qcflow-publisher.qcoder-chat-0.1.1.vsix  qcoder-0.0.1.vsix  qcoder-chat-0.1.0.vsix  quantum-circuit-composer-0.0.1.vsix
python_qllvm/: qllvm.in.py
scripts/: install_cuda_apt.sh  qir_runner_counts.py
test/: Compilation_for_Ion_Trap_Backend.ipynb  Compilation_for_Ion_Trap_Backend_CN.ipynb  Hybrid program compiling support testing.ipynb  Hybrid_program_compiling_support_testing.ipynb  Hybrid_program_compiling_support_testing_CN.ipynb  Language and backend support testing.ipynb  Language_and_backend_support_testing.ipynb  Language_and_backend_support_testing_CN.ipynb  Performance testing.ipynb  Performance_testing.ipynb  Performance_testing_CN.ipynb  run_paper_benchmark.py
test/MQTBench/: ae_nativegates_ibm_qiskit_opt0_10.qasm  ae_nativegates_ibm_qiskit_opt0_11.qasm  ae_nativegates_ibm_qiskit_opt0_12.qasm  ae_nativegates_ibm_qiskit_opt0_13.qasm  ae_nativegates_ibm_qiskit_opt0_14.qasm  ae_nativegates_ibm_qiskit_opt0_15.qasm  ae_nativegates_ibm_qiskit_opt0_16.qasm  ae_nativegates_ibm_qiskit_opt0_17.qasm  ae_nativegates_ibm_qiskit_opt0_18.qasm  ae_nativegates_ibm_qiskit_opt0_19.qasm  ae_nativegates_ibm_qiskit_opt0_2.qasm  ae_nativegates_ibm_qiskit_opt0_20.qasm  ae_nativegates_ibm_qiskit_opt0_21.qasm  ae_nativegates_ibm_qiskit_opt0_22.qasm  ae_nativegates_ibm_qiskit_opt0_23.qasm  ae_nativegates_ibm_qiskit_opt0_24.qasm  ae_nativegates_ibm_qiskit_opt0_25.qasm  ae_nativegates_ibm_qiskit_opt0_26.qasm  ae_nativegates_ibm_qiskit_opt0_3.qasm  ae_nativegates_ibm_qiskit_opt0_4.qasm  (+407 more)
test/utils/: compare_data.py  (+5 more)
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  README.md  qllvm.in
tpls/: CMakeLists.txt  README.cn.md
tpls/mlir/parsers/qiskit/: CMakeLists.txt  qiskit_mlir_generator.cpp  qiskit_mlir_generator.hpp  qiskit_visitor.hpp
tpls/mlir/parsers/qiskit/antlr/: qiskit.g4
tpls/mlir/parsers/qiskit/utils/: expression_handler.cpp  expression_handler.hpp
tpls/mlir/parsers/qiskit/visitor_handlers/: measurement_handler.cpp  quantum_instruction_handler.cpp  quantum_types_handler.cpp
tpls/mlir/qir_qrt_stub/: CMakeLists.txt  qir-qrt-stub.cpp
tpls/mlir/qir_runner_runtime/: CMakeLists.txt  qir-runner-runtime.cpp  qir-runner-runtime.h
tpls/mlir/transforms/: CMakeLists.txt  pass_manager.hpp
tpls/mlir/transforms/lowering/: AssignQubitOpConversion.cpp  CallableLowering.cpp  ComputeMarkerLowering.cpp  DeallocOpLowering.cpp  ExtractQubitOpConversion.cpp  GeneralArrayExtractOpConversion.cpp  InstOpLowering.cpp  QRTFinalizeOpLowering.cpp  QRTInitOpLowering.cpp  QRTInitOpLowering.hpp  QallocOpLowering.cpp  QallocOpLowering.hpp  QarrayConcatOpLowering.cpp  QarrayConcatOpLowering.hpp  QarraySliceOpLowering.cpp  QubitArrayAllocOpLowering.cpp  ValueSemanticsInstOpLowering.cpp
tpls/mlir/transforms/optimizations/: CommutativeCancellationPass.hpp  ConsolidateBlocks.hpp  DecomposemultiPass.cpp  DecomposemultiPass.hpp  IdentityPairRemovalPass.hpp  Merge_u3_gate.cpp  Merge_u3_gate.hpp  ModifierBlockInliner.hpp  RemoveIdentityEquivalent.cpp  RemoveIdentityEquivalent.hpp  RemoveUnusedQIRCallsPass.hpp  SimplifyQubitExtractPass.cpp  SingleQubitGateMergingPass.hpp  circuitState.cpp  circuitState.hpp  circuitState2.cpp  circuitState2.hpp  gen_qasm.hpp  merge_single_gate.cpp  merge_single_gate.hpp  remove_diagonal_gates_before_measure.hpp  trans_basicgate.cpp  trans_basicgate.hpp  trans_u3_ro_rphi.hpp
tpls/mlir/transforms/optimizations/utils/: CMakeLists.txt  circuit.cpp  circuit.hpp  gate_matrix.cpp  gate_matrix.hpp  get_matrix.cpp  kak.cpp  op.cpp
tpls/passes/: CMakeLists.txt
tpls/passes/include/qllvm/passes/: ApplyLayoutQirPass.hpp  CouplingMap.hpp  SabrePass.hpp  u3_to_rphi.hpp
tpls/passes/lib/: DecomposeSwapQirPass.cpp  SabrePass.cpp  SabreSwap.cpp
tpls/python_qllvm/: CMakeLists.txt  qllvm.in.py
(+196 files in other folders)
