cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
if(${CMAKE_VERSION} VERSION_LESS 3.12)
    cmake_policy(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
endif()

set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb -fexceptions")

if(POLICY CMP0068)
  cmake_policy(SET CMP0068 NEW)
  set(CMAKE_BUILD_WITH_INSTALL_NAME_DIR ON)
endif()

if(POLICY CMP0075)
  cmake_policy(SET CMP0075 NEW)
endif()

if(POLICY CMP0077)
  cmake_policy(SET CMP0077 NEW)
endif()

if(POLICY CMP0057)
  cmake_policy(SET CMP0057 NEW)
endif()

if(POLICY CMP0074)
  cmake_policy(SET CMP0074 NEW)
endif()

set(CMAKE_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_DISABLE_IN_SOURCE_BUILDS ON)
set(CMAKE_DISABLE_SOURCE_CHANGES ON)
set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/Modules)

project(qllvm LANGUAGES CXX C)

# installs to ~/.qllvm, and each ninja install updates the executable files
if(CMAKE_INSTALL_PREFIX STREQUAL "/usr/local")
  set(CMAKE_INSTALL_PREFIX "$ENV{HOME}/.qllvm" CACHE PATH "Installation directory (default: ~/.qllvm)" FORCE)
  message(STATUS "Install prefix: ${CMAKE_INSTALL_PREFIX}")
endif()

option(QLLVM_BUILD_TESTS "Build qllvm tests" OFF)

# OpenQASM / MLIR parsers: antlr4-runtime, exprtk, Eigen3 (system paths or QLLVM_DEPS_PREFIX)
set(QLLVM_DEPS_PREFIX "" CACHE PATH "Optional prefix with include/ and lib/ (antlr4-runtime, exprtk headers)")
if(QLLVM_DEPS_PREFIX AND EXISTS "${QLLVM_DEPS_PREFIX}")
  find_library(ANTLR4_RUNTIME NAMES antlr4-runtime PATHS "${QLLVM_DEPS_PREFIX}/lib" NO_DEFAULT_PATH)
  find_path(ANTLR4_INCLUDE NAMES antlr4-runtime.h
        PATHS "${QLLVM_DEPS_PREFIX}/include/antlr4-runtime" "${QLLVM_DEPS_PREFIX}/include")
  find_path(EXPRTK_INCLUDE NAMES exprtk.hpp PATHS "${QLLVM_DEPS_PREFIX}/include" NO_DEFAULT_PATH)
endif()
if(NOT ANTLR4_RUNTIME)
  find_library(ANTLR4_RUNTIME NAMES antlr4-runtime)
endif()
if(NOT ANTLR4_INCLUDE)
  find_path(ANTLR4_INCLUDE NAMES antlr4-runtime.h
        PATHS /usr/include/antlr4-runtime /usr/include /usr/local/include/antlr4-runtime /usr/local/include)
endif()
if(NOT EXPRTK_INCLUDE)
  find_path(EXPRTK_INCLUDE NAMES exprtk.hpp PATHS /usr/include /usr/local/include)
endif()
if(NOT EXPRTK_INCLUDE AND EXISTS "${CMAKE_SOURCE_DIR}/tpls/exprtk/exprtk.hpp")
  set(EXPRTK_INCLUDE "${CMAKE_SOURCE_DIR}/tpls/exprtk")
  message(STATUS "Using bundled exprtk from tpls/exprtk")
endif()
find_package(Eigen3 QUIET)
if(Eigen3_FOUND AND NOT EIGEN3_INCLUDE_DIR)
  set(EIGEN3_INCLUDE_DIR "${EIGEN3_INCLUDE_DIRS}")
endif()
if(NOT EIGEN3_INCLUDE_DIR)
  find_path(EIGEN3_INCLUDE_DIR NAMES Eigen/Core PATHS /usr/include/eigen3 /usr/local/include/eigen3)
endif()
if(NOT ANTLR4_RUNTIME OR NOT ANTLR4_INCLUDE)
  message(FATAL_ERROR "qllvm requires antlr4-runtime. Install libantlr4-runtime-dev or set -DQLLVM_DEPS_PREFIX=")
endif()
if(NOT EXPRTK_INCLUDE)
  message(FATAL_ERROR "qllvm requires exprtk (exprtk.hpp). Add tpls/exprtk or set -DQLLVM_DEPS_PREFIX=")
endif()
if(NOT EIGEN3_INCLUDE_DIR)
  message(FATAL_ERROR "qllvm requires Eigen3. Install libeigen3-dev")
endif()

find_package(Git QUIET)
if(GIT_FOUND)
  execute_process(COMMAND /bin/bash ${CMAKE_SOURCE_DIR}/scripts/get_git_version.sh
                            OUTPUT_VARIABLE QLLVM_BUILD_VERSION ERROR_QUIET
                            OUTPUT_STRIP_TRAILING_WHITESPACE)
  message( STATUS "QLLVM Version / HEAD commit hash: ${QLLVM_BUILD_VERSION}")
endif()

configure_file("${CMAKE_SOURCE_DIR}/cmake/qllvm_config.hpp.in"
               "${CMAKE_BINARY_DIR}/qllvm_config.hpp")
install (FILES ${CMAKE_BINARY_DIR}/qllvm_config.hpp DESTINATION include/qllvm)

add_subdirectory(tpls)
add_subdirectory(tools)
add_subdirectory(python_qllvm)

if (NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  if (NOT MLIR_DIR)
    set(MLIR_DIR ${LLVM_ROOT}/lib/cmake/mlir)
  endif()
  add_subdirectory(mlir)
endif()

install(SCRIPT "${CMAKE_SOURCE_DIR}/cmake/AddPathToRc.cmake")

if (QLLVM_CPACK_DEB_PLATFORM)
message(STATUS "CPack DEB Build Enabled.")
set(CPACK_SET_DESTDIR "on")
set(CPACK_PACKAGING_INSTALL_PREFIX "/tmp")
set(CPACK_GENERATOR "DEB")

set(MAJOR_VERSION 1)
set(MINOR_VERSION 0)
set(PATCH_VERSION 0)

set(CPACK_PACKAGE_DESCRIPTION "qllvm quantum LLVM compiler")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "qllvm is a quantum compiler for OpenQASM and related IR")
set(CPACK_PACKAGE_VENDOR "ORNL")
set(CPACK_PACKAGE_CONTACT "mccaskeyaj@ornl.gov")
set(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
set(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
set(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}")
set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}")
set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_BINARY_DIR}/scripts/debian/postinst")

if (${QLLVM_CPACK_DEB_PLATFORM} STREQUAL "bionic")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "aideqc-llvm")
elseif(${QLLVM_CPACK_DEB_PLATFORM} STREQUAL "focal")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "aideqc-llvm")
endif()
set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
set(CPACK_DEBIAN_PACKAGE_SECTION "base")
set(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})

include(CPack)
endif()
